--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,42 @@
-Flask
-Werkzeug
+bcrypt==4.3.0
+bidict==0.23.1
+blinker==1.9.0
+cffi==1.17.1
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.5
+dnspython==2.7.0
+eventlet==0.40.1
+Flask==3.1.1
+Flask-Mail==0.10.0
+Flask-SocketIO==5.5.1
+future==1.0.0
+greenlet==3.2.3
+h11==0.16.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+netmiko==4.5.0
+ntc_templates==7.9.0
+paramiko==3.5.1
+pillow==11.3.0
+pyasn1==0.6.1
+pycparser==2.22
+Pygments==2.19.1
+PyNaCl==1.5.0
+pyserial==3.5
+pysnmp==7.1.20
+python-engineio==4.12.2
+python-socketio==5.13.0
+PyYAML==6.0.2
+rich==14.0.0
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+scp==0.15.0
+simple-websocket==1.1.0
+six==1.17.0
+textfsm==1.1.3
+Werkzeug==3.1.3
+wsproto==1.2.0
